--- a/remote_bba_mode_installer/remote_bba_mode.service
+++ b/remote_bba_mode_installer/remote_bba_mode.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Dreamcast DNS monitoring via RPI to trigger DCNOW
 After=network.target
+After=dreampi.service
 
 [Service]
 ExecStart=/usr/bin/python /home/pi/dreampi/remote_bba_mode.py
