--- a/remote_bba_mode_installer/remote_bba_mode.service
+++ b/remote_bba_mode_installer/remote_bba_mode.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Dreamcast DNS monitoring via RPI to trigger DCNOW
+Description=Remote BBA_Mode: Dreamcast uses RPI as Gateway and DNS Server to trigger DCNOW
 After=network.target
 After=dreampi.service
 
